# wfcli

./: .env.example  AGENTS.md  Cargo.toml  README.md  dist-workspace.toml  package-lock.json  package.json  test-helpers.js
.github/workflows/: publish-npm.yml  release.yml
crates/wfcli/: Cargo.toml
crates/wfcli/src/: api.rs  config.rs  errors.rs  main.rs  output.rs  session.rs
doc/: README.md  auth-login-troubleshooting.md  oauth-scope-encoding.md  rust-npm-platform-distribution.md  token-retrieval-mechanism.md
scripts/: generate-platform-npm-packages.mjs  patch-dist-workflow.mjs
skills/attendance-correction-registration/: SKILL.md
skills/attendance-correction-registration/agents/: openai.yaml
skills/attendance-correction-registration/references/: command-cheatsheet.md
skills/infoplus/: SKILL.md
skills/infoplus/agents/: openai.yaml
skills/infoplus/references/: command-cheatsheet.md
src/: authSession.js  cli.js  config.js  infoplusClient.js  keyring.js  output.js
src/commands/: apps.js  auth.js  file.js  tasks.js  user.js  version.js
test/: apps-list.test.js  auth-login.test.js  auth-refresh-token.test.js  auth-session.test.js  auth-show-token.test.js  config.test.js  file.test.js  infoplus-client.test.js  tasks.test.js  user-profile.test.js  version-command.test.js
