[package]
name = "wfcli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/inforix/wfcli"

[[bin]]
name = "wfcli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
clap = { version = "4.5.48", features = ["derive"] }
chrono = { version = "0.4.42", features = ["clock"] }
dotenvy = "0.15.7"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native"] }
rand = "0.8.5"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
tiny_http = "0.12.0"
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5.7"
urlencoding = "2.1.3"
webbrowser = "1.0.6"
